# DICE

./: .gitignore  README.md
DICE Presentations/Project Presentation 1/: Slides Sources.docx
DICE Presentations/Project Presentation 1/Diagram images/Sky Reference Images/: img9_20p.avif
Diagrams/Old/: DICE Controller Module Architecture.drawio
Hardware/Boards/3D Model Fit Check/3D Model Fit Check/: 3D Model Fit Check.kicad_pcb  3D Model Fit Check.kicad_prl  3D Model Fit Check.kicad_pro  3D Model Fit Check.kicad_sch
Hardware/Boards/3d Models/: FPGA Heatsink.step  IO Heatsink.step
Hardware/Boards/FPGA Heatsink/FPGA Heatsink/: FPGA Heatsink.kicad_pcb  FPGA Heatsink.kicad_prl  FPGA Heatsink.kicad_pro  FPGA Heatsink.kicad_sch
Hardware/Boards/FPGA Module/FPGA Module/: #auto_saved_files#  Board_to_Boards.kicad_sch  Clock Generator.kicad_sch  DDR4.kicad_sch  FPGA Config.kicad_sch  FPGA Module.kicad_dru  FPGA Module.kicad_pcb  FPGA Module.kicad_prl  FPGA Module.kicad_pro  (+15 more)
Hardware/Boards/Layout Studies/: fpga module layout study.xlsx
Hardware/Boards/Layout Studies /: fpga module layout study.xlsx
Hardware/Diagrams/: DICE Theory of Operation Slides.pptx
Hardware/Diagrams/Old/: DICE FPGA Module Architecture.drawio  DICE Overall Architecture.drawio  DICE Theory of Operation Slides.key
Hardware/FPGA/: DDR Pin Delays.xlsx  DDR4 Pinouts.xlsx  UltraScale Memory Interface Capacities_v1p3.xlsm  synth_2.csv
Hardware/FPGA/200T_MEMORY/: 200T_MEMORY.xpr  vivado.jou  vivado_20012.backup.jou
Hardware/FPGA/ArithmeticEncoder/: .gitignore  arithmetic_coder.xpr  arithmetic_coder_tb_behav.wcfg  arithmetic_coder_tb_behav1.wcfg  binary_tree_tb_behav.wcfg  pending_bits_tb_behav.wcfg  shift_buffer_tb_behav.wcfg  stream_buffer_tb_behav.wcfg
Hardware/FPGA/DICE/: core_sim_behav.wcfg  dice.xpr  dice_v1_no_ycrcb.prm  rgb_to_ycrcb_sim_behav.wcfg  zigzag_sim_behav.wcfg
Hardware/FPGA/Documentation/: DDR Pin Delays.xlsx  DDR4 Pinouts.xlsx
Hardware/FPGA/FT600_Ground_Up/: tb_parameters.vh  tb_stream_top.sv
Hardware/FPGA/HyperramController/: .gitignore  hyperram_project.xpr  tb_hyperram_top_behav.wcfg
Hardware/FPGA/SPI Controller/: SPI_Controller.xpr
Hardware/FPGA/mig_7series_0_ex/: mig_7series_0_ex.xpr  vivado.jou
Hardware/Pinouts/: XCKU3P-2FFVA676 Pinout.xlsx
Software/: .clang-format
Software/C_software_test/: CMakeLists.txt  image_codec.cpp  image_codec.h  image_handler.cpp  image_handler.h  main.cpp
Software/arithmetic_encoder/: .gitignore  Makefile  adaptive_model.h  adaptive_model_16.h  arithmetic_codec.h  bit_buffer.h  bounds_comp.py  codec.h  codec_wrapper.cpp  coder.cpp  default_model.h  model.h  range.h  streams.py  strided.cpp  strided2.cpp  strided_16.h  strided_codec_16.h  strided_test.cpp  test.cpp  tree.cpp  uniform_model.h
Software/dice_fpga_system_controller_firmware/: CMakeLists.txt  compile_commands.json  constants.h  dice_fpga_system_controller_firmware.c  functions.h  si5338_config.h
Software/dice_io_module_firmware/: CMakeLists.txt  README.md  constants.h  dice_imx219.c  dice_imx219.h  dice_imx477.c  dice_imx477.h  dice_io_module_firmware.c  functions.c  functions.h
Software/dice_io_module_firmware/imx477_resources/: sensor_imx477.h
Software/dice_reference_compression/: quality_statistics.py
Software/dice_reference_compression - modified/cpp/: mainwindow.cpp
Software/dice_reference_compression - modified/pyqt/: ZoomableImageLabel.py  fpga_accelerated_compressor.py  image_codec.py  mainwindow.py  requirements.txt  tile_compressorV2.py
Software/dice_reference_compression/cpp/: CMakeLists.txt  README.md  blockviewer.cpp  blockviewer.h  config.h.in  main.cpp  mainwindow.h
Software/dice_reference_compression/cpp/src/: reference.cpp
Software/dice_reference_compression/pyqt/: USB_FTX232H_FT60X.py  ZoomableImageLabel.py  blockviewer.py  file_format.py  fpga_accelerated_compressor.py  huffman_encoder.py  image_codec.py  john_compression.py  main.py  mainwindow.py  old.fpga_accelerated_compressor.py  processedwindow.py  quality_statistics.py  requirements.txt  tile_compressor.py  tile_compressorV2.py
Software/fpga_compression_test/: USB_FTX232H_FT60X.py  fpga_compression_test.py  fpga_compression_test_zigzag.py
Software/optimized software dct/: Cb_channel.hex  Cr_channel.hex  app_constants.py  app_gui.py  app_libraries.py  dct_colorv3.py  generate quantization tables.py  image_codec.py  lzss_loc.py  main.py  rle_test.py  tile_compressor.py  tile_compressorV2.py
Software/python scripts/: USB_FTX232H_FT60X.py  compressed_image.hex  dct_compresor_test.py  fpga_accelerated_compressor.py  huffman_encoder.py  huffman_encoderV1.py  hw ycrcb test.py  image_codec.py  lzss_loc.py  requirements.txt  tile_compressor.py
(+7249 files in other folders)
